--- a/index.html
+++ b/index.html
@@ -8,13 +8,25 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
-  <body>
-    <h1>Example Website</h1>
-    <p>
-      This domain is for use in illustrative examples in documents. You may use
-      this domain in literature without prior coordination or asking for
-      permission.
-    </p>
-    <a href="https://mhaidarhanif.com">More information...</a>
+  <body class="bg-neutral-100">
+    <main class="flex justify-center items-center">
+      <div
+        class="m-20 bg-white p-10 w-full max-w-xl rounded-lg shadow space-y-5"
+      >
+        <h1 class="text-3xl font-bold">Example Website</h1>
+        <p>
+          This domain is for use in illustrative examples in documents. You may
+          use this domain in literature without prior coordination or asking for
+          permission.
+        </p>
+        <p>
+          <a
+            class="text-blue-500 hover:text-blue-700"
+            href="https://mhaidarhanif.com"
+            >More information...</a
+          >
+        </p>
+      </div>
+    </main>
   </body>
 </html>
